Adding functionality to post a new labeling function
