# swagger_server/controllers/default_controller.py
@@ -2,7 +2,11 @@ import connexion
 import six
 
 from swagger_server import util
+import sys
 from qubitcrunch import core
+import importlib
+import inspect
+import snorkel
 
 def batch_unlabeled_return():  # noqa: E501
     """Return a batch of unlabeled data.
@@ -15,7 +19,7 @@ def batch_unlabeled_return():  # noqa: E501
     return  core.batch_unlabeled_return()
 
 
-def labeling_function_new():  # noqa: E501
+def labeling_function_new(labeling_function_str):  # noqa: E501
     """Provide a new labeling function.
 
     POST a new labeling function. # noqa: E501
@@ -23,7 +27,7 @@ def labeling_function_new():  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    core.labeling_function_new(labeling_function_str)
 
 
 def labeling_functions_return():  # noqa: E501
@@ -34,7 +38,9 @@ def labeling_functions_return():  # noqa: E501
 
     :rtype: None
     """
-    return core.labeling_functions_return()
+    importlib.import_module("qubitcrunch.labeling_functions")
+    all_lfs = [obj for name, obj in inspect.getmembers(sys.modules["qubitcrunch.labeling_functions"]) if isinstance(obj, snorkel.labeling.lf.core.LabelingFunction)]
+    return [lf.name for lf in all_lfs]
 
 
 def weakly_label(weak):  # noqa: E501
@@ -47,4 +53,4 @@ def weakly_label(weak):  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    return core.weakly_label(weak)
